feat(3): Permettre de supprimer un produit du panier

--- a/front/src/app/products/features/product-list/product-list.component.html
+++ b/front/src/app/products/features/product-list/product-list.component.html
@@ -28,6 +28,7 @@
                         <p-button label="Modifier" severity="secondary" (onClick)="onUpdate(product)"/>
                         <p-button label="Supprimer" severity="danger" (onClick)="onDelete(product)" />
                         <p-button label="Ajouter au panier" severity="success" (onClick)="onAddToCart(product)" />
+                        <p-button label="Supprimer du panier" severity="warning" (onClick)="onRemoveFromCart(product)" *ngIf="isInCart(product)"/>
                     </div>
                 </ng-template>
             </p-card>
