--- a/front/src/app/app.component.scss
+++ b/front/src/app/app.component.scss
@@ -2,3 +2,20 @@
     overflow: hidden;
     height: 100%;
 }
+
+.cart-badge {
+    position: absolute;
+    top: -0.85rem;
+    right: -0.0rem;
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    padding: 0.15rem 0.5rem;
+    font-size: 0.75rem;
+    font-weight: bold;
+}
+
+.p-toolbar-group-end {
+    position: relative;
+    display: inline-block;
+}
