--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="p-toolbar-group-end">
         <span class="cart-badge" *ngIf="cartItemCount > 0">{{ cartItemCount }}</span>
-        <i class="pi pi-shopping-cart" style="font-size: 2rem; position: relative;"></i>
+        <i class="pi pi-shopping-cart" style="font-size: 2rem; position: relative;" (click)="goToPanelProducts()"></i>
     </div>
 </p-toolbar>
 <p-splitter 
